k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-web
  namespace: user-management
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - host: user-management.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django-web
                port:
                  number: 80
